--- a/index.html
+++ b/index.html
@@ -8,14 +8,62 @@
   </head>
   <main>
   <body>
-    <header class="masthead">
-      <h1></h1>
+    <header class="header">
     </header>
-    <section>
-      <div class="create-box">
-
-      </div>
+    <section class="hero">
+        <h1>Create your new website for free</h1>
+        <p>WordPress.com is the best place for your personal blog or business site.</p>
+        <button class="button" type="button" name="button"></button>
+        <span class="arrow"></span>
+        <div class="icon-box">
+          <div class="hero-icon">
+          </div>
+          <div class="hero-icon">
+          </div>
+          <div class="hero-icon">
+          </div>
+        </div>
     </section>
+    <section class="blue-section">
+    </section>
+
+    <section class="grey-section">
+        <div class="grey-inner">
+        </div>
+        <div class="grey-inner">
+        </div>
+        <div class="grey-inner">
+        </div>
+        <div class="grey-inner">
+        </div>
+        <div class="grey-inner">
+        </div>
+        <div class="grey-inner">
+        </div>
+    </section>
+
+    <section class="blue-action">
+      <button class="button b2" type="button" name="button"></button>
+    </section>
+
+    <footer class="footer">
+      <ul class="footer-nav">
+        <li>Apps</li>
+        <li>Themes</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>VIP</li>
+        <li>Discover</li>
+        <li>About Us</li>
+        <li>Terms of Service</li>
+        <li>Privacy</li>
+        <li>Language</li>
+      </ul>
+
+      <div class="footer-img">
+      </div>
+    </footer>
+
   </main>
   </body>
 </html>
