--- a/index.html
+++ b/index.html
@@ -3,67 +3,104 @@
   <head>
     <meta charset="utf-8">
     <title>Tuesday homework Wordpress homepage</title>
-    <link rel="stylesheet" href="styles/main.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" charset="utf-8">
+    <link rel="stylesheet" href="styles/main.css" media="screen" charset="utf-8">
   </head>
-  <main>
   <body>
-    <header class="header">
+    <header class="main">
+      <section>
+        <div class="logo"></div>
+        <div></div>
+        <div></div>
+      </section>
     </header>
+   <main>
     <section class="hero">
         <h1>Create your new website for free</h1>
-        <p>WordPress.com is the best place for your personal blog or business site.</p>
-        <button class="button" type="button" name="button"></button>
-        <span class="arrow"></span>
-        <div class="icon-box">
-          <div class="hero-icon">
-          </div>
-          <div class="hero-icon">
-          </div>
-          <div class="hero-icon">
-          </div>
-        </div>
-    </section>
-    <section class="blue-section">
-    </section>
+        <h2>WordPress.com is the best place for your personal blog or business site.</h2>
 
-    <section class="grey-section">
-        <div class="grey-inner">
-        </div>
-        <div class="grey-inner">
-        </div>
-        <div class="grey-inner">
-        </div>
-        <div class="grey-inner">
-        </div>
-        <div class="grey-inner">
-        </div>
-        <div class="grey-inner">
-        </div>
+        <button class="createSite highlight"></button>
+        <button class="arrow"></button>
+
+        <section class="features">
+          <ul>
+            <li>
+              <div class="icon"></div>
+              <div class="caption"></div>
+            </li>
+            <li>
+              <div class="icon"></div>
+              <div class="caption"></div>
+            </li>
+            <li>
+              <div class="icon"></div>
+              <div class="caption"></div>
+            </li>
+          </ul>
+        </section>
     </section>
 
-    <section class="blue-action">
-      <button class="button b2" type="button" name="button"></button>
+    <section class="mission">
     </section>
 
-    <footer class="footer">
-      <ul class="footer-nav">
-        <li>Apps</li>
-        <li>Themes</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>VIP</li>
-        <li>Discover</li>
-        <li>About Us</li>
-        <li>Terms of Service</li>
-        <li>Privacy</li>
-        <li>Language</li>
-      </ul>
+    <section class="main features">
+      <article class="feature">
+        <div class="icon"></div>
+        <h2 class="feature-name"></h2>
+        <p class="feature-detail"></p>
+      </article>
+        <div class="icon"></div>
+        <h2 class="feature-name"></h2>
+        <p class="feature-detail"></p>
+      <article class="feature">
+        <div class="icon"></div>
+        <h2 class="feature-name"></h2>
+        <p class="feature-detail"></p>
+      </article>
+      <article class="feature">
+        <div class="icon"></div>
+        <h2 class="feature-name"></h2>
+        <p class="feature-detail"></p>
+      </article>
+      <article class="feature">
+        <div class="icon"></div>
+        <h2 class="feature-name"></h2>
+        <p class="feature-detail"></p>
+      </article>
+      <article class="feature">
+        <div class="icon"></div>
+        <h2 class="feature-name"></h2>
+        <p class="feature-detail"></p>
+      </article>
+      <article class="feature">
+        <div class="icon"></div>
+        <h2 class="feature-name"></h2>
+        <p class="feature-detail"></p>
+      </article>
+    </section>
 
-      <div class="footer-img">
-      </div>
+    <section class="action">
+      <button></button>
+    </section>
+   </main>
+
+   <footer class="main">
+     <nav class="site">
+       <a href="#">Apps</a>
+        <a href="#">Themes</a>
+        <a href="#">Support</a>
+        <a href="#">Blogs</a>
+        <a href="#">VIP</a>
+        <a href="#">Discover</a>
+        <a href="#">About Us</a>
+     </nav>
+
+     <nav class="legal">
+       <a href="#">Terms of Service</a>
+        <a href="#">Privacy</a>
+        <a href="#">Language</a>
+     </nav>
+      <h4>Automattic</h4>
     </footer>
-
-  </main>
   </body>
 </html>
