--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header class="main">
       <section>
         <div class="logo"></div>
-        <div></div>
-        <div></div>
+        <h3>Wordpress<span>.com</span></h3>
+        <h4>Log In</h4>
       </section>
     </header>
    <main>
@@ -19,68 +19,80 @@
         <h1>Create your new website for free</h1>
         <h2>WordPress.com is the best place for your personal blog or business site.</h2>
 
-        <button class="createSite highlight"></button>
+        <button class="createSite highlight">
+          <h2>Create Website</h2>
+        </button>
         <button class="arrow"></button>
 
         <section class="features">
           <ul>
             <li>
               <div class="icon"></div>
-              <div class="caption"></div>
+              <section class="caption">
+                <h2>Ready for mobile</h2>
+                <p>Download the iOS or Android app</p>
+              </section>
             </li>
             <li>
               <div class="icon"></div>
-              <div class="caption"></div>
+              <section class="caption">
+                <h2>Freshly Pressed</h2>
+                <p>Strong voices from around the world</p>
+              </section>
             </li>
             <li>
               <div class="icon"></div>
-              <div class="caption"></div>
+              <section class="caption">
+                <h2>Hundreds of designs</h2>
+                <p>Find your unique style</p>
+              </section>
             </li>
           </ul>
         </section>
     </section>
 
     <section class="mission">
+      <h1>WordPress.com is the easiest way to create a free website or blog.  It's a powerful hosting platform that grows with you.</h1>
     </section>
 
     <section class="main features">
       <article class="feature">
         <div class="icon"></div>
-        <h2 class="feature-name"></h2>
-        <p class="feature-detail"></p>
-      </article>
-        <div class="icon"></div>
-        <h2 class="feature-name"></h2>
-        <p class="feature-detail"></p>
-      <article class="feature">
-        <div class="icon"></div>
-        <h2 class="feature-name"></h2>
-        <p class="feature-detail"></p>
+        <h2 class="feature-name">Easy to use</h2>
+        <p class="feature-detail">WordPress.com lets you create beautiful and powerful websites or blogs.</p>
       </article>
       <article class="feature">
         <div class="icon"></div>
-        <h2 class="feature-name"></h2>
-        <p class="feature-detail"></p>
+        <h2 class="feature-name">Your own domain name</h2>
+        <p class="feature-detail">We'll set up and configure your custom domain name so that you can start using it in seconds.</p>
       </article>
       <article class="feature">
         <div class="icon"></div>
-        <h2 class="feature-name"></h2>
-        <p class="feature-detail"></p>
+        <h2 class="feature-name">Search engine and SEO friendly</h2>
+        <p class="feature-detail">WordPress.com is optimized for SEO and getting your site in front of searchers on Google, Bing, Yahoo, and others.</p>
       </article>
       <article class="feature">
         <div class="icon"></div>
-        <h2 class="feature-name"></h2>
-        <p class="feature-detail"></p>
+        <h2 class="feature-name">The best support</h2>
+        <p class="feature-detail">Our Happiness Engineers work night and day through live chat, email, support pages, and forums to answer any questions you have.</p>
       </article>
       <article class="feature">
         <div class="icon"></div>
-        <h2 class="feature-name"></h2>
-        <p class="feature-detail"></p>
+        <h2 class="feature-name">Premium plans</h2>
+        <p class="feature-detail">Our premium plans give you more control with additional customization options. They all come with free trials.</p>
+      </article>
+      <article class="feature">
+        <div class="icon"></div>
+        <h2 class="feature-name">Millions of users</h2>
+        <p class="feature-detail">We welcome 50,000 new sites every day. From small business sites, artist portfolios, and blogs, to giant media organizations like TIME and CNN.</p>
       </article>
     </section>
 
     <section class="action">
-      <button></button>
+      <h1>WordPress powers 23% of the internet</h1>
+      <button>
+        <h2>Create Website</h2>
+      </button>
     </section>
    </main>
 
