--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header class="main">
+        <img class="logo" src="images/logo.png" alt"Wordpress logo">
       <section>
-        <div class="logo"></div>
         <h3>Wordpress<span>.com</span></h3>
         <h4>Log In</h4>
       </section>
@@ -22,26 +22,26 @@
         <button class="createSite highlight">
           <h2>Create Website</h2>
         </button>
-        <button class="arrow"></button>
+        <button class="arrow">^</button>
 
         <section class="features">
           <ul>
             <li>
-              <div class="icon"></div>
+              <img src="images/tablet.png" alt="Tablet">
               <section class="caption">
                 <h2>Ready for mobile</h2>
                 <p>Download the iOS or Android app</p>
               </section>
             </li>
             <li>
-              <div class="icon"></div>
+              <img src="images/newspaper.png" alt="Newspaper">
               <section class="caption">
                 <h2>Freshly Pressed</h2>
                 <p>Strong voices from around the world</p>
               </section>
             </li>
             <li>
-              <div class="icon"></div>
+              <img src="images/paint-brush.png" alt="Paint brush">
               <section class="caption">
                 <h2>Hundreds of designs</h2>
                 <p>Find your unique style</p>
@@ -57,32 +57,32 @@
 
     <section class="main features">
       <article class="feature">
-        <div class="icon"></div>
+        <img class ="icon" src="images/lightbulb.png" alt="Lightbulb">
         <h2 class="feature-name">Easy to use</h2>
         <p class="feature-detail">WordPress.com lets you create beautiful and powerful websites or blogs.</p>
       </article>
       <article class="feature">
-        <div class="icon"></div>
+        <img class ="icon" src="images/cloud.png" alt="Cloud">
         <h2 class="feature-name">Your own domain name</h2>
         <p class="feature-detail">We'll set up and configure your custom domain name so that you can start using it in seconds.</p>
       </article>
       <article class="feature">
-        <div class="icon"></div>
+        <img class ="icon" src="images/code.png" alt="SEO friendly">
         <h2 class="feature-name">Search engine and SEO friendly</h2>
         <p class="feature-detail">WordPress.com is optimized for SEO and getting your site in front of searchers on Google, Bing, Yahoo, and others.</p>
       </article>
       <article class="feature">
-        <div class="icon"></div>
+        <img class ="icon" src="images/comments.png" alt="Comments">
         <h2 class="feature-name">The best support</h2>
         <p class="feature-detail">Our Happiness Engineers work night and day through live chat, email, support pages, and forums to answer any questions you have.</p>
       </article>
       <article class="feature">
-        <div class="icon"></div>
+        <img class ="icon" src="images/gift.png" alt="Gift">
         <h2 class="feature-name">Premium plans</h2>
         <p class="feature-detail">Our premium plans give you more control with additional customization options. They all come with free trials.</p>
       </article>
       <article class="feature">
-        <div class="icon"></div>
+        <img class ="icon" src="images/globe.png" alt="Globe">
         <h2 class="feature-name">Millions of users</h2>
         <p class="feature-detail">We welcome 50,000 new sites every day. From small business sites, artist portfolios, and blogs, to giant media organizations like TIME and CNN.</p>
       </article>
